# SecureProcessManager

./: .gitignore  .ps  CMakeLists.txt  LICENSE  README.md  bld  build-local.sh  build.sh  catlogs  cbuild.sh  exampleConfigFile.conf  k  lenghty_process  unlinksem.cpp
cmake/: build_types.cmake  common_sources.cmake  gtest_config.cmake  include_directories.cmake  install_rules.cmake  set_compilers.cmake
include/: controller_base.h  message.h  messenger.h  process.h  process_base.h  process_control.h  process_handler.h  process_helper.h  process_interface.h  simul_process.h  synchro.h
include/api/: api.h
include/concurrency/: communicator.h  message.h  messenger.h  semaphore_guard.h  synchro.h
include/config/: ConfigReader.h
include/consolecontroller/: cli_controller.h  console.h  console_control.h  console_loop.h
include/controller/: cli_controller.h  command_controller.h  console_control.h  controller_base.h  process_control.h  process_handler.h  system_controller.h
include/logger/: console_logger.h  file_logger.h  logger.h  logger_instance.h  logger_interface.h
include/maincontroller/: main_controller.h
include/process/: base_handler.h  base_process.h  process.h  process_base.h  process_helper.h  process_interface.h  process_simulator.h  simul_process.h
include/process/networkprocess/: network_process.h
include/process/systemprocess/: file_descriptor.h  system_process.h
include/processcontroller/: ProcessRegistry.h  base_handler.h  controller_base.h  main_controller.h  process_controller.h  process_handler.h  process_monitor.h  system_controller.h
include/processmonitors/: process_monitor.h  system_monitor.h
include/synchro/: communicator.h  locked_boolean.h  locked_variable.h  semaphore_guard.h  synchro.h
include/tools/: file_system.h  nap_time.h  process_status.h  random_stuff.h  semaphore_guard.h  string_tools.h  thread_controller.h  time_manager.h  timestamp.h
src/: ProcessController.cpp  SecureProcessManager.cpp  controller_base.cpp  messenger.cpp  process.cpp  process_base.cpp  process_control.cpp  process_handler.cpp  process_helper.cpp  simul_process.cpp  waitPidProc.cpp
src/api/: api.cpp
src/concurrency/: communicator.cpp  messenger.cpp  semaphore_guard.cpp  synchro.cpp
src/config/: ConfigReader.cpp
src/consolecontroller/: cli_controller.cpp  console_control.cpp  console_loop.cpp
src/controller/: console_control.cpp  controller_base.cpp  process_control.cpp  process_handler.cpp
src/logger/: console_logger.cpp  file_logger.cpp  logger.cpp  logger_instance.cpp
src/maincontroller/: main_controller.cpp  main_controller_createthreads.cpp  main_controller_terminatethreads.cpp  main_controller_threads.cpp
src/networkprocess/: network_process.cpp
src/process/: base_handler.cpp  base_process.cpp  communicator.cpp  messenger.cpp  process.cpp  process_helper.cpp  process_simulator.cpp  simul_process.cpp
src/process/networkprocess/: network_process.cpp
src/process/systemprocess/: file_descriptor.cpp  system_process.cpp
src/processcontroller/: ProcessRegistry.cpp  base_handler.cpp  controller_base.cpp  main_controller.cpp  process_controller.cpp  process_handler.cpp  process_monitor.cpp  system_controller.cpp
src/processmonitors/: process_monitor.cpp  system_monitor.cpp
src/synchro/: semaphore_guard.cpp  synchro.cpp
src/tools/: process_status.cpp  random_stuff.cpp  semaphore_guard.cpp  string_tools.cpp  thread_controller.cpp  time_manager.cpp  timestamp.cpp
tests/: test_base_process.cpp  test_control_loop.cpp  test_logger.cpp  test_main.cpp  test_string_tools.cpp  test_system_process.cpp  tests_maincontroller.cpp
